--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	      			<h1 class="name"> Gen-X Innovation, Incubation and Entrepreneurship Cell, HBTU Kanpur</h1>
 				</div>
 	    		<div class="col-2">
-	      			<a href="www.hbtu.ac.in" target="_blank"><img src="logo.jpeg" alt="College Logo" width="100px" height="100px"></a>
+	      			<a href="https://www.hbtu.ac.in" target="_blank"><img src="logo.jpeg" alt="College Logo" width="100px" height="100px"></a>
 	    		</div>
 	  		</div>
 		</div>
